--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "prisma": "^5.21.1",
     "socket.io": "^4.8.0"
