--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "faker-js": "^1.0.0",
     "joi": "^17.13.3",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
